# xarray-norm

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_align.py  test_toys.py  test_xarray_norm.py
toys/: optimise.py  xarray_norm.py
