[tool.poetry]
name = "toys"
version = "0.1.0"
description = ""
authors = ["Joseph Beaver <joseph.beaver@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.2"
numpy = "^1.20.2"
scipy = "^1.6.2"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
